--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,37 +1,99 @@
-<!DOCTYPE html> 
-<html> 
-	<head> 
-		<title>My Page</title> 
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<link rel="stylesheet" href="css/jquery.mobile-1.3.0.min.css" />
-	</head> 
-	<body> 
-	
-		<div data-role="page" data-theme="b">
+<!DOCTYPE html>
+<html lang="en" style="height:100%">
+  <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
+	<title>微理论</title>
+	<!-- 引入 WeUI -->
+	<link rel="stylesheet" href="css/weui.css"/>
 
-			<div data-role="header">
-				<h1>jQuery Mobile App</h1>
+  </head> 
+  <body ontouchstart style="height:100%" >
+	<div class="weui-tab" style="height:100%">
+	  <div class="weui-tab__panel" >
+		<div class="weui-search-bar" id="searchBar">
+		  <form class="weui-search-bar__form">
+			<div class="weui-search-bar__box">
+			  <i class="weui-icon-search"></i>
+			  <input type="search" class="weui-search-bar__input" placeholder="搜索" required="">
+			  <a href="javascript:" class="weui-icon-clear"></a>
 			</div>
-
-			<div data-role="content">	
-				<ul data-role="listview" data-inset="true" data-filter="true">
-					<li><a href="#">Acura</a></li>
-					<li><a href="#">Audi</a></li>
-					<li><a href="#">BMW</a></li>
-					<li><a href="#">Cadillac</a></li>
-					<li><a href="#">Ferrari</a></li>
-				</ul>
-			</div>
-
+			<label class="weui-search-bar__label">
+			  <i class="weui-icon-search"></i>
+			  <span>搜索</span>
+			</label>
+		  </form>
+		  <a href="javascript:" class="weui-search-bar__cancel-btn">取消</a>
 		</div>
-		
-		<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery.mobile-1.3.0.min.js"></script>
-		<script type="text/javascript" src="js/cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-		<script type="text/javascript">
-            app.initialize();
-        </script>
-        		
-	</body>
+		<!--page1-->
+		<div id="page1">
+		  <div class="weui-panel__hd">理论题库</div>
+		  <div class="weui-cells"> 
+			<a class="weui-cell weui-cell_access" href="javascript:;"> 
+			  <div class="weui-cell__bd"> 
+				<p>十九大应知应会100题</p> 
+			  </div> <div class="weui-cell__ft">135人答题</div>
+			</a> 
+			<a class="weui-cell weui-cell_access" href="javascript:;">
+			  <div class="weui-cell__bd"> 
+				<p>政治常识100题</p>
+			  </div>
+			  <div class="weui-cell__ft">146人答题</div> 
+			</a>
+		  </div>
+		  <div class="weui-footer">
+			<p></p>
+			<p class="weui-footer__text">Copyright &copy; 2017 王塬</p> 
+		  </div>
+		</div>
+		<div id="page2" style="display:none">
+		  <!-- 图文组合列表 -->
+		  <div class="weui-panel weui-panel_access">
+			<!-- head 部分 -->
+			<div class="weui-panel__hd">最新理论学习资料</div>
+			<!-- body 部分 -->
+			<div class="weui-panel__bd">
+			  <!-- 一个列表条目 -->
+			  <a href="#" class="weui-media-box weui-media-box_appmsg">
+				<div class="weui-media-box__hd">
+				  <img src="" alt="" class="weui-media-box__thumb">
+				</div>
+				<div class="weui-media-box__bd">
+				  <h4 class="weui-media-box__title">十九大报告全文</h4>
+				  <p class="weui-media-box__desc">大会的主题是：不忘初心，牢记使命，高举中国特色社会主义伟大旗帜，决胜全面建成小康社会，夺取新时代中国特色社会主义伟大胜利，为实现中华民族伟大复兴的中国梦不懈奋斗。[1]</p>
+				</div>
+			  </a>
+			</div>
+			<!-- foot 部分 -->
+			<div class="weui-panel__ft">
+			  <a href="#" class="weui-cell weui-cell_access weui-cell_link">
+				<div class="weui-cell__bd">查看更多</div>
+				<span class="weui-cell__ft"></span>
+			  </a>
+			</div>
+		  </div>
+		</div>
+		<div id="page3">
+		</div>
+	  </div>
+	  <div class="weui-tabbar">
+        <a href="javascript:$('#page2').hide();$('#page3').hide();$('#page1').show();" class="weui-tabbar__item weui-bar__item_on">
+		  <img src="./img/icon_nav_cell.png" alt="" class="weui-tabbar__icon">
+		  <p class="weui-tabbar__label">微答题</p>
+        </a>
+        <a href="javascript:$('#page1').hide();$('#page3').hide();$('#page2').show();;" class="weui-tabbar__item">
+		  <img src="./img/icon_nav_panel.png" alt="" class="weui-tabbar__icon">
+		  <p class="weui-tabbar__label">微理论</p>
+        </a>
+        <a href="javascript:$('#page2').hide();$('#page1').hide();$('#page3').show();;" class="weui-tabbar__item">
+		  <img src="./img/icon_nav_actionSheet.png" alt="" class="weui-tabbar__icon">
+		  <p class="weui-tabbar__label">关于</p>
+        </a>
+	  </div>
+	</div>
+	<script src="js/jquery-1.9.1.js"></script>
+	<script src="js/vconsole.min.js"></script>
+	<script src="https://res.wx.qq.com/open/libs/weuijs/1.1.3/weui.min.js"></script>
+	<script src="js/index.js"></script>
+  </body>
 </html>
