--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -100,10 +100,10 @@
       </div> 
       <div class="weui-msg__text-area"> 
        <h2 id="scorePanel" class="weui-msg__title"></h2> 
-       <p class="weui-msg__desc"><a href="javascript:void(0);">Share to ......</a></p> 
+       <p class="weui-msg__desc"><a href="javascript:void(0);">分享到 ......</a></p> 
       </div> 
       <div class="weui-msg__opr-area"> 
-       <p class="weui-btn-area"> <a href="javascript:generateQuestions(0);turnPageOn('#page4')" class="weui-btn weui-btn_primary">Try again?</a> <a href="javascript:turnPageOn('#page1')" class="weui-btn weui-btn_default">Back to Main page</a> </p> 
+       <p class="weui-btn-area"> <a href="javascript:generateQuestions(0);turnPageOn('#page4')" class="weui-btn weui-btn_primary">再来一次？</a> <a href="javascript:turnPageOn('#page1')" class="weui-btn weui-btn_default">回到主页</a> </p> 
       </div> 
      </div> 
     </div> 
@@ -138,7 +138,7 @@
       </div> 
       <div class="button-sp-area"> 
        <p></p> 
-       <a href="javascript:checkAnswerPd(nowQuestion);" class="weui-btn weui-btn_primary">Commit<i name="wrongAnswer" class="weui-icon-warn" style="display:none;"></i></a> 
+       <a href="javascript:checkAnswerPd(nowQuestion);" class="weui-btn weui-btn_primary">确定<i name="wrongAnswer" class="weui-icon-warn" style="display:none;"></i></a> 
       </div> 
      </div> 
      <div id="qtypedx" name="qtype" class="weui-animate-fade-in"> 
@@ -150,7 +150,7 @@
       <!--Control Panel--> 
       <div class="button-sp-area"> 
        <p></p> 
-       <a href="javascript:checkAnswerDx(nowQuestion);" class="weui-btn weui-btn_primary">Commit<i name="wrongAnswer" class="weui-icon-warn" style="display:none;"></i></a> 
+       <a href="javascript:checkAnswerDx(nowQuestion);" class="weui-btn weui-btn_primary">确定<i name="wrongAnswer" class="weui-icon-warn" style="display:none;"></i></a> 
       </div> 
      </div> 
     </div> 
