--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="css/weui.css" />
 	<link rel="stylesheet" href="css/animate.css" />
 	<style>
-
 	</style>
 </head>
 
@@ -227,11 +226,21 @@
 			</div>
 		</div>
 	</div>
-<<<<<<< HEAD
+	<div id='showrecords' style="display: none;">
+		<div class="weui-mask"></div>
+		<div class="weui-dialog">
+			<div class="weui-dialog__hd"><strong class="weui-dialog__title">本题库排行榜</strong></div>
+			<div class="weui-dialog__bd">
+				<table id='recordstable'>
+				</table>
+			</div>
+			<div class="weui-dialog__ft">
+				<a href="javascript:$('#showrecords').hide();" class="weui-dialog__btn weui-dialog__btn_primary">确定</a>
+			</div>
+		</div>
+	</div>
 	<script src='js/cordova.js'></script>
-=======
 	<script src="js/cordova.js"></script>
->>>>>>> 7bfb120e657db0ca220cf6d69fea1f7ef4619568
 	<script src="js/jquery-1.9.1.js"></script>
 	<script src="js/vconsole.min.js"></script>
 	<script src="js/weui.js"></script>
