--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -231,7 +231,7 @@
 		<div class="weui-dialog">
 			<div class="weui-dialog__hd"><strong class="weui-dialog__title">本题库排行榜</strong></div>
 			<div class="weui-dialog__bd">
-				<table id='recordstable'>
+				<table id='recordstable' height='80%'>
 				</table>
 			</div>
 			<div class="weui-dialog__ft">
