--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -227,12 +227,12 @@
 			</div>
 		</div>
 	</div>
-	<div id='showrecords' style="display: none;">
+	<div id='showrecords' style="display: none;overflow-y:auto;max-height:70%">
 		<div class="weui-mask"></div>
 		<div class="weui-dialog">
 			<div class="weui-dialog__hd"><strong class="weui-dialog__title">本题库排行榜</strong></div>
-			<div class="weui-dialog__bd">
-				<table id='recordstable' height='80%'>
+			<div class="weui-dialog__bd" >
+				<table id='recordstable'>
 				</table>
 			</div>
 			<div class="weui-dialog__ft">
