--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -227,9 +227,9 @@
 			</div>
 		</div>
 	</div>
-	<div id='showrecords' style="display: none;overflow-y:auto;max-height:70%">
+	<div id='showrecords' style="display: none;">
 		<div class="weui-mask"></div>
-		<div class="weui-dialog">
+		<div class="weui-dialog" style="overflow-y: auto; max-height: 70%;">
 			<div class="weui-dialog__hd"><strong class="weui-dialog__title">本题库排行榜</strong></div>
 			<div class="weui-dialog__bd" >
 				<table id='recordstable'>
