--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -83,11 +83,11 @@
 						</div>
 						<p class="weui-grid__label"> 错题本 </p>
 					</a>
-					<a href="javascript:;" class="weui-grid">
+					<a href="javascript:shoujidati();" class="weui-grid">
 						<div class="weui-grid__icon">
 							<img src="./img/icon_nav_cell.png" alt="" />
 						</div>
-						<p class="weui-grid__label"> 学习记录 </p>
+						<p class="weui-grid__label"> 手机答题 </p>
 					</a>
 					<a href="javascript:$('#__vconsole').toggle();" class="weui-grid">
 						<div class="weui-grid__icon">
@@ -241,7 +241,7 @@
 		</div>
 	</div>
 
-	<script src="js/cordova.js"></script>
+
 	<script src="js/jquery-1.9.1.js"></script>
 	<script src="js/vconsole.min.js"></script>
 	<script src="js/weui.js"></script>
